--- a/extension-src/tsconfig.json
+++ b/extension-src/tsconfig.json
@@ -4,7 +4,7 @@
 		"target": "ES2022",
 		"outDir": "out",
 		"lib": [
-			"ES2022"
+			"ES2022", "dom", "es6", "dom.iterable", "scripthost"
 		],
 		"sourceMap": true,
 		"rootDir": "src",
