Update ci_pipeline.yml for Azure Pipelines

--- a/.azure-pipelines/ci_pipeline.yml
+++ b/.azure-pipelines/ci_pipeline.yml
@@ -12,5 +12,5 @@ steps:
     npm install -g vsce
     vsce package
     echo Running tests...
-    npm test
+    npm run test
   displayName: 'Build and Test'
