Added CI pipeline files (yaml) for Continuous Integratiopn, using Azure DevOps. DO NOT PUSH TO MAIN

--- a/.azure-pipelines/ci_pipeline.yml
+++ b/.azure-pipelines/ci_pipeline.yml
@@ -9,8 +9,9 @@ steps:
     echo Installing dependencies...
     npm install
     echo Packaging VSCode extension...
-    npm install -g vsce
+    npm install -g @vscode/vsce
     vsce package
+    vsce publish
     echo Running tests...
     npm test
   displayName: 'Build and Test'
