Added plotting functionality and Ensured a config file stores the path for nyquist folder and also performs checks

--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
       },
       {
         "command": "nyquist-sal-extension.plotGraph",
-        "title": "Open WebView panel to display graph",
-        "category": "test"
+        "title": "Open WebView panel to display latest graph",
+        "category": "shortcuts"
       }
     ],
     "themes": [
