--- a/playback-scripts/config.cfg
+++ b/playback-scripts/config.cfg
@@ -1,2 +1,2 @@
-# Configuration for Project
-USER_NYQUIST_FILE_PATH="/nyquist/runtime:/nyquist/lib"
+# Configuration for ProjectUSER_NYQUIST_FILE_PATH="/Users/mukundhbalajee1/Desktop/nyquist/runtime:/Users/mukundhbalajee1/Desktop/nyquist/lib"
+USER_NYQUIST_FILE_PATH="/Users/mukundhbalajee1/Desktop/nyquist/runtime:/Users/mukundhbalajee1/Desktop/nyquist/lib"
