Fixed YAML configuration

--- a/.azure-pipelines/ci_pipeline.yml
+++ b/.azure-pipelines/ci_pipeline.yml
@@ -34,7 +34,7 @@ jobs:
       npm run test
     displayName: 'Build and Test'
 
-- job: BuildOnUbuntu
+- job: BuildOnMac
   pool:
     vmImage: 'macos-latest'
     
